--- a/game1.html
+++ b/game1.html
@@ -70,6 +70,7 @@
             <button class="button" id="contact"><a href="contact.html">CONTACT</a></button>
             <button class="button" id="selected"><a href="game1.html">GAME 1</a></button>
             <button class="button" id="game-2"><a href="game2.html">GAME 2</a></button>
+            <button class="button" id="game-2"><a href="game3.html">GAME 3</a></button>
         </div>
     </div>
     <div class="content">
